syntax = "proto3";

package scryinfo;

enum Status {
    OK = 0;
    ERROR = 1;
}

enum Type {
    DEFAULT = 0;
}

service KeyService {
    //生成地址
    rpc GenerateAddress (AddressParameter) returns (AddressInfo) {
    }
    //校验地址
    rpc VerifyAddress (AddressParameter) returns (AddressInfo) {
    }
    //内容加密
    rpc ContentEncrypt (CipherParameter) returns (CipherText) {
    }
    //内容解密
    rpc ContentDecrypt (CipherParameter) returns (CipherText) {
    }
    //消息签名
    rpc Signature (CipherParameter) returns (CipherText) {
    }
}

message AddressParameter {
    string password = 1;
    string address = 2;
}

message AddressInfo {
    Status status = 1;
    string address = 2;
    string msg = 3;
}

message CipherParameter {
    Type type = 1;
    string password = 2;
    string address = 3;
    bytes message = 4;
}

message CipherText {
    Status status = 1;
    bytes data = 2;
    string msg = 3;
}